--- a/home.html
+++ b/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAMILTON - 4FOOD 🍲</title>
+   
     <link rel="stylesheet" type="text/css" href="responsividade.css">
+    <link rel="stylesheet" type="text/css" href="./menu.css">
 </head>
 
 <body>
@@ -12,11 +14,13 @@
         <header>
             <h1><a href="home.html">HAMILTON - 4FOOD 🍲</a></h1>
 
-            <nav>
-            <a href=""><p>texto</p></a>
-            <a href=""><p>texto</p></a>
-            <a href=""><p>texto</p></a>
-            <a href=""><p>texto</p></a>
+            <nav class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Cardápio</a>
+                <li><a href="#">texto</a></li>
+                <li><a href="#">texto</a></li>
+             </ul>
             </nav>
 
         </header>
