Imagens dos produtos e seus nomes inseridos

--- a/produtos.html
+++ b/produtos.html
@@ -32,43 +32,43 @@
         <article>
 
             <div>
-                <a href=""><img src="images/1.jpg" alt=""></a>
-                <div class="legenda">Legenda</div>
+                <a href=""><img src="images/duplocheddarmelt-br.png" alt=""></a>
+                <div class="legenda">Duplo Cheddar</div>
             </div>
 
             <div>
-                <a href=""><img src="images/1.jpg" alt=""></a>
-                <div class="legenda">Legenda</div>
+                <a href=""><img src="images/picanha-bacon.png" alt=""></a>
+                <div class="legenda">Picanha com Bacon</div>
             </div>
 
             <div>
-                <a href=""><img src="images/1.jpg" alt=""></a>
-                <div class="legenda">Legenda</div>
+                <a href=""><img src="images/salada-premium-com-quinoa.png" alt=""></a>
+                <div class="legenda">Salada Premium</div>
             </div>
 
             <div>
-                <a href=""><img src="images/1.jpg" alt=""></a>
-                <div class="legenda">Legenda</div>
+                <a href=""><img src="images/veggie-duplo.png" alt=""></a>
+                <div class="legenda">Veggie Duplo</div>
             </div>
 
             <div>
-                <a href=""><img src="images/1.jpg" alt=""></a>
-                <div class="legenda">Legenda</div>
+                <a href=""><img src="images/picanhagalaxia.png" alt=""></a>
+                <div class="legenda">Picanha Galáxia</div>
             </div>
 
             <div>
-                <a href=""><img src="images/1.jpg" alt=""></a>
-                <div class="legenda">Legenda</div>
+                <a href=""><img src="images/picanha-duplo.png" alt=""></a>
+                <div class="legenda">Duplo Picanha</div>
             </div>
 
             <div>
-                <a href=""><img src="images/1.jpg" alt=""></a>
-                <div class="legenda">Legenda</div>
+                <a href=""><img src="images/shake_br2.png" alt=""></a>
+                <div class="legenda">Milk-shakes</div>
             </div>
 
             <div>
-                <a href=""><img src="images/1.jpg" alt=""></a>
-                <div class="legenda">Legenda</div>
+                <a href=""><img src="images/Flurry-Prestigio-Mini.png" alt=""></a>
+                <div class="legenda">MC Flurry Prestígio</div>
             </div>
             
             
