arrumei a posição do footer

--- a/produtos.html
+++ b/produtos.html
@@ -78,10 +78,12 @@
 
       <footer>
         <nav>
-            <a href=""><p>texto</p></a>
-            <a href=""><p>texto</p></a>
-            <a href=""><p>texto</p></a>
-            <a href=""><p>texto</p></a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Cardápio</a>
+                <li><a href="#">texto</a></li>
+                <li><a href="#">texto</a></li>
+             </ul>
         </nav>
 
     </footer>  
