--- a/TrabalheConosco/index.html
+++ b/TrabalheConosco/index.html
@@ -21,6 +21,26 @@
         </nav>
     </header>
 
+    <section>
+        <h1>Trabalhe Conosco</h1>
+        <p>Se você procura uma oportunidade como atendente ou jovem aprendiz no restaurante 4Food, cadastrar seu currículo abaixo.
+
+            Para se candidatar a outras oportunidades no 4Food na área corporativa, por favor, envie um e-mail para trabalheconosco@br.f4.com
+            
+            Se você tem algum tipo de deficiência, será muito bem-vindo neste time! Cadastre seu currículo.
+        </p>
+
+        <form>
+            <h2>Envie seu currículo</h2>
+            <h3>Dados pessoais</h3>
+            <input type="text" placeholder="Área de enteresse">
+            <input type="text" placeholder="Nome*">
+            <input type="text" placeholder="E-mail*">
+            <input type="text" placeholder="Telefone*">
+            <button type="submit">Enviar currículo</button>
+        </form>
+    </section>
+
     <footer>vou pensar o que escrevo aqui</footer>  
 </body>
 </html>
