css global ealgumas organizações de templates

--- a/TrabalheConosco/index.html
+++ b/TrabalheConosco/index.html
@@ -3,23 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" href="../responsividade.css">
+    <link rel="Stylesheet" href="../global.css">
     <link rel="Stylesheet" href="./style.css">
     <title>Trabalhe Conosco</title>
 </head>
-<body>
-    <header>
-        <h1><a href="home.html">HAMILTON - 4FOOD 🍲</a></h1>
 
-        <nav class="menu">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Cardápio</a>
-            <li><a href="#">texto</a></li>
-            <li><a href="#">texto</a></li>
-         </ul>
-        </nav>
-    </header>
+<body>
+    <div id="container">
+        <header>
+            <h1><a href="home.html">HAMILTON - 4FOOD 🍲</a></h1>
+
+
+            <nav class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="../Produtos/produtos.html">Produtos</a>
+                <li><a href="#">Trabalhe conosco</a>                    
+             </ul>
+
+            </nav>
+
+        </header>
+
+    <div id="main">
 
     <section>
         <h1>Trabalhe Conosco</h1>
@@ -41,6 +47,17 @@
         </form>
     </section>
 
-    <footer>vou pensar o que escrevo aqui</footer>  
+    </div>
+
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="#">Nossa equipe</a>
+                <li><a href="https://www.future4.com.br" target="_blank">Onde estamos</a></li>
+             </ul>
+        </nav>
+
+    </footer>  
+    </div>
 </body>
 </html>
