organizações no css global

--- a/template.html
+++ b/template.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="../Produtos/produtos.html">Produtos</a>
-                <li><a href="#">Trabalhe conosco</a>                    
+                <li><a href="../TrabalheConosco/index.html">Trabalhe conosco</a>                
              </ul>
 
             </nav>
