--- a/Produtos/produtos.html
+++ b/Produtos/produtos.html
@@ -6,6 +6,7 @@
     <title>HAMILTON - 4FOOD 🍲</title>
   
     <link rel="stylesheet" type="text/css" href="../global.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="../Produtos/produtos.html">Produtos</a>
-                <li><a href="#">Trabalhe conosco</a>                    
+                <li><a href="../TrabalheConosco/index.html">Trabalhe conosco</a>                    
              </ul>
 
             </nav>
