--- a/TrabalheConosco/index.html
+++ b/TrabalheConosco/index.html
@@ -29,11 +29,11 @@
 
     <section>
         <h1>Trabalhe Conosco</h1>
-        <p>Já pensou em trabalhar conosco ou ser jovem aprendiz no 4Food e fazer parte da nossa equipe? cadastre seu currículo abaixo.
+        <p>Se você procura uma oportunidade como atendente ou jovem aprendiz no restaurante 4Food, cadastrar seu currículo abaixo.
 
-            Para se candidatar em outras oportunidades no 4Food, envie um e-mail para trabalheconosco@br.f4.com.
+            Para se candidatar a outras oportunidades no 4Food na área corporativa, por favor, envie um e-mail para trabalheconosco@br.f4.com
             
-            Somos um espaço que incentiva a nossa equipe, Se você possui alguma deficiência,será muito bem-vindo no nosso time! faça seu Cadastro.
+            Se você tem algum tipo de deficiência, será muito bem-vindo neste time! Cadastre seu currículo.
         </p>
 
         <form>
