Alteração no css do projeto

--- a/Produtos/produtos.html
+++ b/Produtos/produtos.html
@@ -6,26 +6,39 @@
     <title>HAMILTON - 4FOOD 🍲</title>
   
     <link rel="stylesheet" type="text/css" href="../global.css">
-
     <link rel="stylesheet" type="text/css" href="produtos.css">
-
-    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <div id="container">
-        <header>
-            <h1><a href="home.html">HAMILTON - 4FOOD 🍲</a></h1>
+    <header class="menu">
+        <ul>
+          <li><a href="#">Contato</a> 
+              <ul>
+                  <li><a href="">Trabalhe conosco</a></li>
+                  <li><a href="">Onde estamos</a></li>
+                  <li><a href="">FAQ</a></li>
+              </ul>
+          </li>
+              <li><a href="#">Sobre</a> 
+                  <ul>
+                      <li><a href="">Quem somos</a></li>
+                      <li><a href="">Cases sucesso</a></li>
+                      <li><a href="">Nossa equipe</a></li>
+                  </ul>
+              </li>
+          <li><a href="#">Produtos</a>
+              <ul>
+                  <li><a href="">Sanduíches</a></li>
+                  <li><a href="">Sucos</a></li>
+                  <li><a href="">Sobremesas</a></li>
+                  <li><a href="">Promoções</a></li>
+              </ul>
+          </li>
 
-            <nav class="menu">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="../Produtos/produtos.html">Produtos</a>
-                <li><a href="../TrabalheConosco/index.html">Trabalhe conosco</a>                    
-             </ul>
-            </nav>
 
-        </header>
+          <li><a href="#">Home</a>                       
+        </ul>               
+      </header>
 
         <div id="main">
 
@@ -74,16 +87,24 @@
             </article>
         </div>
 
-      <footer>
+ 
+        <footer>
+            <ul>
+                <li><a href=""></a>Trabalhe Conosco |</li>
+                <li><a href=""></a>Algo |</li>
+                <li><a href=""></a>Algo</li>
+            </ul> 
+        </footer>
+
+
+          <!--
         <nav>
             <ul>
                 <li><a href="#">Nossa equipe</a>
                 <li><a href="https://www.future4.com.br" target="_blank">Onde estamos</a></li>
              </ul>
         </nav>
-
-      </footer>  
-   </div> 
+        -->
    
 </body>
 </html>
