--- a/TrabalheConosco/index.html
+++ b/TrabalheConosco/index.html
@@ -9,21 +9,35 @@
 </head>
 
 <body>
-    <div id="container">
-        <header>
-            <h1><a href="home.html">HAMILTON - 4FOOD 🍲</a></h1>
+    <header class="menu">
+        <ul>
+          <li><a href="#">Contato</a> 
+              <ul>
+                  <li><a href="">Trabalhe conosco</a></li>
+                  <li><a href="">Onde estamos</a></li>
+                  <li><a href="">FAQ</a></li>
+              </ul>
+          </li>
+              <li><a href="#">Sobre</a> 
+                  <ul>
+                      <li><a href="">Quem somos</a></li>
+                      <li><a href="">Cases sucesso</a></li>
+                      <li><a href="">Nossa equipe</a></li>
+                  </ul>
+              </li>
+          <li><a href="#">Produtos</a>
+              <ul>
+                  <li><a href="">Sanduíches</a></li>
+                  <li><a href="">Sucos</a></li>
+                  <li><a href="">Sobremesas</a></li>
+                  <li><a href="">Promoções</a></li>
+              </ul>
+          </li>
 
 
-            <nav class="menu">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="../Produtos/produtos.html">Produtos</a>
-                <li><a href="#">Trabalhe conosco</a>                    
-             </ul>
-
-            </nav>
-
-        </header>
+          <li><a href="../home.html">Home</a>                       
+        </ul>               
+      </header>
 
     <div id="main">
 
@@ -31,7 +45,7 @@
         <h1>Trabalhe Conosco</h1>
         <p>Se você procura uma oportunidade como atendente ou jovem aprendiz no restaurante 4Food, cadastrar seu currículo abaixo.
 
-            Para se candidatar a outras oportunidades no 4Food na área corporativa, por favor, envie um e-mail para trabalheconosco@br.f4.com
+            Para se candidatar a outras oportunidades no 4Food na área corporativa, por favor, envie um e-mail para trabalheconosco@br.f4.com.
             
             Se você tem algum tipo de deficiência, será muito bem-vindo neste time! Cadastre seu currículo.
         </p>
@@ -39,7 +53,7 @@
         <form>
             <h2>Envie seu currículo</h2>
             <h3>Dados pessoais</h3>
-            <input type="text" placeholder="Área de enteresse">
+            <input type="text" placeholder="Área de interesse">
             <input type="text" placeholder="Nome*">
             <input type="text" placeholder="E-mail*">
             <input type="text" placeholder="Telefone*">
@@ -58,6 +72,6 @@
         </nav>
 
     </footer>  
-    </div>
+ 
 </body>
 </html>
